// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.toSucceedWith reports details when it fails due to a failure result: toFailTestAndMatchSnapshot 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoSucceedWith[2m([22m[32mexpected[39m[2m)[22m
Expected:
  Success with [32m"oops"[39m
Received:
  Failure with "oops""
`;

exports[`.toSucceedWith reports details when it fails due to a success result with .not: toFailTestAndMatchSnapshot 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toSucceedWith([22m[32mexpected[39m[2m)[22m
Expected:
  Not success with [32m"hello"[39m
Received:
  Success with [31m"hello"[39m"
`;

exports[`.toSucceedWith reports details when it fails due to success with a non-matching value: toFailTestAndMatchSnapshot 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).[22mtoSucceedWith[2m([22m[32mexpected[39m[2m)[22m
Expected:
  Success with [32m"goodbye"[39m
Received:
  Success with [31m"hello"[39m"
`;
